--- a/pytest.ini
+++ b/pytest.ini
@@ -9,7 +9,7 @@ markers =
     entertainment: All entertainment tests
 
 addopts = -p no:warnings
-filterwarnings =
-    error
-    ignore::UserWarning
-    ignore:function ham\(\) is deprecated:DeprecationWarning
+#filterwarnings =
+#    error
+#    ignore::UserWarning
+#    ignore:function ham\(\) is deprecated:DeprecationWarning
