--- a/pytest.ini
+++ b/pytest.ini
@@ -1,15 +1,4 @@
 [pytest]
-python_files = test_*
-python_classes = *Tests
-python_functions = test_*
-
-markers =
-    smoke: All critical smoke tests
-    body: All body tests
-    entertainment: All entertainment tests
-
-addopts = -p no:warnings
-#filterwarnings =
-#    error
-#    ignore::UserWarning
-#    ignore:function ham\(\) is deprecated:DeprecationWarning
+python_files=test_*
+python_classes=*Tests
+python_functions=test_
